3.0.0 (unreleased)
------------------

- require and adapt to devpi-server-3.0.0 which always uses
  normalized names internally.

2.5.0 (2015-11-19)
------------------

- fix issue288: classifiers rendering wrong with read only data views

- index.pt, project.pt, version.pt: added info about pypi_whitelist. This
  requires devpi-server > 2.4.0 to work.

- fix issue286: indexing of most data failed due to new read only views

2.4.2 (2015-11-11)
------------------

- log exceptions during search index updates.

- adapted tests/code to work with devpi-server-2.4


2.4.1 (2015-10-09)
------------------

- fix issue255: close and discard whoosh searchers after each use, they use too
  much memory if stored in a thread local for reuse.


2.4.0 (2015-07-09)
------------------

- macros.pt: Add autofocus attribute to search field

- macros.pt and style.css: Moved "How to search?" to the right of the search
  button and adjusted width of search field accordingly.

- fix issue244: server status info

  - added support for status message plugin hook ``devpiweb_get_status_info``
  - macros.pt: added macros ``status`` and ``statusbadge`` and placed them
    below the search field.
  - added status.pt: shows server status information

- toxresults.pt: fix missing closing ``div`` tag.


2.3.0 (2015-05-13)
------------------

- toxresults.pt: use just one line for result status indicator

- adapt devpi-web to devpi-server-2.2.0 hash-spec changes

- version.pt: moved hash to title attribute of table cell. With the upcoming
  change to sha256 it's too long and it's available from the link url as well.

- use renamed devpiserver_run_commands hook 

- fix issue233: projects on root/pypi with no releases lead to a traceback


2.2.3 (2015-02-24)
------------------

- fix issue207: added documentation url for latest stable release of a package.


2.2.2 (2014-11-27)
------------------

- fix issue184: better height calculation of documentation iframe.


2.2.1
---------------
