@@ -465,7 +465,7 @@ class PyPIView:
         # XXX we might want to check if user/index has root/pypi as a base
         stage = context.model.getstage('root', 'pypi')
         assert stage.ixconfig["type"] == "mirror", stage.ixconfig
-        stage.clear_cache(context.project)
+        stage.clear_simplelinks_cache(context.project)
         stage.get_simplelinks_perstage(context.project)
         redirect(self.request.route_url(
             "/{user}/{index}/+simple/{project}",
